# pypuzzles

./: .gitignore  LICENSE  Makefile  README  README.md  README.org  countdown.py  setup.cfg  trackword.py  words.py
conf/: Makefile  config.mk  constraints.txt  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
puzzle/: __init__.py  allplates.py  blossom.py  cli.py  countdown.py  numberplate.py  trackword.py  wordiply.py  wordlink.py  words.py  wordwheel.py
