[metadata]
name = pypuzzles
version = attr: puzzle.__version__
description = Puzzle solvers
long_description = file: README
url = https://github.com/zondo/pypuzzles
license_files = LICENSE

author = Glenn Hutchings
author_email = zondo42@gmail.com
license = MIT
copyright = 2021, Glenn Hutchings

classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:

install_requires =
    docopt
    networkx
    requests-cache

[options.entry_points]
console_scripts =
    countdown = puzzle.countdown:main
    trackword = puzzle.numberplate:main
    numberplate = puzzle.numberplate:main
    wordwheel = puzzle.wordwheel:main

[aliases]
wheel = bdist_wheel

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
exclude =
    puzzle/__init__.py

ignore = E731, W504

[mypy]
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

warn_unreachable = true
warn_return_any = true

ignore_missing_imports = false
